[tool.poetry]
name = "portdb_yaleman_org"
version = "0.0.1"
description = ""
authors = [
    "James Hodgkinson <james@terminaloutcomes.com>",
]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.9"
ghp-import = "^2.1.0"
requests = "^2.32.3"
invoke = "^2.2.0"
livereload = "^2.7.1"

[tool.poetry.dependencies.pelican]
extras = [
    "markdown",
]
version = "^4.10.2"

[tool.poetry.dev-dependencies]
pylint = "^3.3.3"
pytest = "^8.3.4"
black = "^24.10.0"
mypy = "^1.14"
types-requests = "^2.32.0"

[tool.poetry.group.dev.dependencies]
ruff = "^0.9.0"
mypy = "^1.14.1"
black = "^24.10.0"
types-invoke = "^2.0.0.10"

[build-system]
requires = [
    "poetry-core>=1.0.0",
]
build-backend = "poetry.core.masonry.api"

[project]
name = "portdb_yaleman_org"
description = ""
license = "MIT"
version = "0.0.1"
authors = [
    { name = "James Hodgkinson", email = "james@terminaloutcomes.com" },
]

[tool.ruff]
line-length = 200