[tool.poetry]
name = "portdb_yaleman_org"
version = "0.0.1"
description = ""
authors = ["James Hodgkinson <james@terminaloutcomes.com>"]
license = "MIT"

package-mode = false

[tool.poetry.dependencies]
python = "^3.9"
ghp-import = "^2.1.0"
requests = "^2.32.5"
invoke = "^2.2.0"
livereload = "^2.7.1"

[tool.poetry.dependencies.pelican]
extras = ["markdown"]
version = "^4.11.0"

[tool.poetry.dev-dependencies]
pylint = "^3.3.8"
pytest = "^8.4.2"
black = "^25.1.0"
mypy = "^1.18"
types-requests = "^2.32.4"

[tool.poetry.group.dev.dependencies]
ruff = "^0.13.0"
mypy = "^1.18.1"
black = "^25.1.0"
types-invoke = "^2.0.0.10"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[project]
name = "portdb_yaleman_org"
description = ""
license = "MIT"
version = "0.0.1"
authors = [{ name = "James Hodgkinson", email = "james@terminaloutcomes.com" }]

[tool.ruff]
line-length = 200
