[project]
name = "portdb"
description = "PortDB website"
license = { text = "MIT" }
version = "0.0.2"
authors = [{ name = "James Hodgkinson", email = "james@terminaloutcomes.com" }]
requires-python = ">=3.13"
dependencies = [
    "ghp-import>=2.1.0",
    "requests>=2.32.5",
    "invoke>=2.2.1",
    "livereload>=2.7.1",
    "pelican[markdown]>=4.11.0",
]


[tool.ruff]
line-length = 200

[dependency-groups]
dev = [
    "ruff>=0.15.7",           #tricking TOML formatter into being nice
    "mypy>=1.19.1",
    "types-invoke>=2.0.0.10",
    "ty>=0.0.24",
    "livereload>=2.7.1",
    "types-requests>=2.32.4.20260107",
]

[tool.pdm]
distribution = false

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"
